--- a/assets/css/mystyles.css
+++ b/assets/css/mystyles.css
@@ -4,6 +4,7 @@ html,
 body {
     height: 100%;
     background-color: #000;
+    color: whitesmoke;
     font-size: 16px;
 }
 
@@ -49,7 +50,6 @@ footer {
 .navbar-header,
 .navbar-default .navbar-brand {
     background-color: hsl(212, 96%, 56%);
-    color: white;
     font-size: 24px;
     font-weight: bold;
 }
